# 7ph-graph

./: .gitignore  CONTEXT.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
baseline/: subgraphs.json
curation/: pilots.toml
deploy/: README.md
docs/: archetype-merge-heuristics.md  deploy.md  development.md  research-log.md
docs/adr/: 0001-graph-store-kuzu.md  0002-graph-model.md  0003-data-sources-and-ingestion.md  0004-pilot-identity.md  0005-hidden-gem-band.md  0005-pilot-curation.md  0006-event-year-from-deck-creation.md  0007-display-name-identity.md  0008-multi-snapshot-ingestion-gate.md  0009-curation-split.md  0010-append-stable-threading.md  0011-graph-store-ladybug.md  0012-hidden-gem-band.md  0013-temporal-trends.md  0014-evidence-guard-audit.md
docs/design/: v1-visual-direction.html  v1-visual-direction.md
scripts/: deploy_space.sh
src/graph7ph/: __main__.py  app.py  baseline.py  build.py  curation.py  db.py  explore.py  fetch.py  ingest.py  models.py  numfmt.py  palette.py  pilots.py  provenance.py  query.py  render.py  serve.py  theme.py  trends.py
tests/: conftest.py  test_app.py  test_baseline.py  test_build.py  test_cli.py  test_concurrency.py  test_curation.py  test_db.py  test_deploy.py  test_entrypoint.py  test_explore.py  test_fetch.py  test_ingest.py  test_models.py  test_numfmt.py  test_palette.py  test_pilots.py  test_provenance.py  test_query.py  test_render.py  test_serve.py  test_theme.py  test_trends.py
tests/fixtures/: cards_index.json  decks.json
